dataset1235/2025-2/2868285114/users/1060082378/executions/2135592949_3530285078.log
== SUBMISSION (2025-08-12 23:11:07)
-- CODE: 
string = "Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower("Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(string.lower("Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: str.lower() takes no arguments (1 given)
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(string.lower("Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: str.lower() takes no arguments (1 given)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:23:15)
-- CODE: 
string = "Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(frase.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(frase.lower())
          ^^^^^
NameError: name 'frase' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(frase.lower())
          ^^^^^
NameError: name 'frase' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:22:19)
-- CODE: 
string = "Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada bryon, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada bryon, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:11:19)
-- CODE: 
string = "Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(lower("Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(lower("Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
          ^^^^^
NameError: name 'lower' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(lower("Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
          ^^^^^
NameError: name 'lower' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:11:18)
-- CODE: 
string = "Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(lower("Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(lower("Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
          ^^^^^
NameError: name 'lower' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(lower("Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
          ^^^^^
NameError: name 'lower' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:18:10)
-- CODE: 
string = "Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print("Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada bryon, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada bryon, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:11:18)
-- CODE: 
string = "Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(lower("Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(lower("Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
          ^^^^^
NameError: name 'lower' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(lower("Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
          ^^^^^
NameError: name 'lower' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:22:18)
-- CODE: 
string = "Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada bryon, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada bryon, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:18:08)
-- CODE: 
string = "Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print("Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada bryon, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada bryon, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:25:24)
-- CODE: 
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:11:05)
-- CODE: 
string = "Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower("Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(string.lower("Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: str.lower() takes no arguments (1 given)
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(string.lower("Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: str.lower() takes no arguments (1 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:23:44)
-- CODE: 
string = "Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada bryon, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada bryon, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:23:19)
-- CODE: 
string = "Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(frase.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(frase.lower())
          ^^^^^
NameError: name 'frase' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(frase.lower())
          ^^^^^
NameError: name 'frase' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:23:49)
-- CODE: 
string = "Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada bryon, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada bryon, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:17:50)
-- CODE: 
string = "Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print("Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra".lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada bryon, a condessa de lovelace, nasceu em 1815, na inglaterra
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada bryon, a condessa de lovelace, nasceu em 1815, na inglaterra
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:17:52)
-- CODE: 
string = "Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print("Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra".lower())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada bryon, a condessa de lovelace, nasceu em 1815, na inglaterra
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada bryon, a condessa de lovelace, nasceu em 1815, na inglaterra
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:23:50)
-- CODE: 
string = "Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada bryon, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada bryon, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:23:07)
-- CODE: 
string = "Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    print(.lower())
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    print(.lower())
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:25:23)
-- CODE: 
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
